First successful workflow run
Add minio helm chart
Configure argo to start using minio helm
Run first successful workflow

--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
   - name: argo-workflows
     version: 11.0.0
     repository: https://charts.bitnami.com/bitnami
+
+  - name: minio
+    version: 14.0.0
+    repository: https://charts.bitnami.com/bitnami
