--- a/helm/admin/workflow-pv.yaml
+++ b/helm/admin/workflow-pv.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: workflow-pv
-  namespace: argo
+  namespace: argo-helm
 spec:
   capacity:
     storage: 5Gi  # Adjust size as needed
   accessModes:
     - ReadWriteMany  # Allows multiple nodes to write
   hostPath:
-    path: /Users/rushirajnenuji/K8s/test  # Adjust to the path you want on your host machine
+    path: /Users/rushirajnenuji/K8s/test-helm  # Adjust to the path you want on your host machine
