--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -155,6 +155,9 @@ argo-workflows:
       ## @param server.auth.mode Set authentication mode. Either `server`, `client` or `sso`.
       ##
       mode: server
+    service:
+      ports:
+        http: 2746
       
   ## @section Argo Workflows Controller configuration parameters
   ##
@@ -167,6 +170,19 @@ argo-workflows:
     workflowNamespaces:
       - default
       - argo
+
+    config: |
+      artifactRepository:
+        s3:
+          bucket: argo-workflows
+          endpoint: gse-minio:9000
+          accessKeySecret:
+            name: minio
+            key: rootUser
+          secretKeySecret:
+            name: minio
+            key: rootPassword
+          insecure: true
 
   ## @section Executor configuration section
   ##
@@ -201,3 +217,18 @@ argo-workflows:
   ##
   postgresql:
     enabled: false
+
+
+minio:
+  auth:
+    ## @param auth.rootUser MinIO&reg; root username
+    ##
+    rootUser: admin
+    ## @param auth.rootPassword Password for MinIO&reg; root user
+    ##
+    rootPassword: password
+  ## @param defaultBuckets Comma, semi-colon or space separated list of buckets to create at initialization (only in standalone mode)
+  ## e.g:
+  ## defaultBuckets: "my-bucket, my-second-bucket"
+  ##
+  defaultBuckets: "argo-workflows"
