--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: dataone-gse
+name: ogdc
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
