--- a/helm/admin/secrets.yaml
+++ b/helm/admin/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: minio-credentials
-  namespace: argo-helm
+  namespace: qgnet
 type: Opaque
 stringData:
   root-user: admin
