--- a/helm/admin/workflow-pv.yaml
+++ b/helm/admin/workflow-pv.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: workflow-pv
-  namespace: argo-helm
+  namespace: qgnet
 spec:
   capacity:
     storage: 5Gi  # Adjust size as needed
