--- a/helm/admin/workflow-pvc.yaml
+++ b/helm/admin/workflow-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: workflow-pvc
-  namespace: argo-helm
+  namespace: qgnet
 spec:
   accessModes:
     - ReadWriteMany
