--- a/helm/templates/tests/test-connection.yaml
+++ b/helm/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "dataone-gse.fullname" . }}-test-connection"
+  name: "{{ include "ogdc.fullname" . }}-test-connection"
   labels:
-    {{- include "dataone-gse.labels" . | nindent 4 }}
+    {{- include "ogdc.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "dataone-gse.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "ogdc.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
