--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,4 +1,4 @@
-# Default values for OGDC-argo
+# Default values for OGDC
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -178,7 +178,7 @@ argo-workflows:
       artifactRepository:
         s3:
           bucket: argo-workflows
-          endpoint: qgnet-argo-minio:9000
+          endpoint: qgnet-ogdc-minio:9000
           accessKeySecret:
             name: minio-credentials
             key: root-user
