Use release name in pv/pvc def
https://helm.sh/docs/chart_template_guide/getting_started/#adding-a-simple-template-call

--- a/helm/templates/workflow-pvc.yaml
+++ b/helm/templates/workflow-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: workflow-pvc
+  name: {{ .Release.Name }}-workflow-pvc
   namespace: qgnet
 spec:
   accessModes:
