--- a/helm/templates/workflow-pv.yaml
+++ b/helm/templates/workflow-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: workflow-pv
+  name: {{ .Release.Name }}-workflow-pv
   namespace: qgnet
 spec:
   capacity:
