--- a/helm/templates/workflow-pv.yaml
+++ b/helm/templates/workflow-pv.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.ENV "dev" }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -10,3 +11,4 @@ spec:
     - ReadWriteMany  # Allows multiple nodes to write
   hostPath:
     path: {{ .Values.OgdcPVHostPath }}
+{{ end }}
