WIP: setup minio to use existing PVC for persistant storage

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -116,3 +116,6 @@ minio:
   ## defaultBuckets: "my-bucket, my-second-bucket"
   ##
   defaultBuckets: "argo-workflows"
+
+  persistence:
+    existingClaim: qgnet-ogdc-workflow-pvc
