--- a/helm/templates/workflow-pvc.yaml
+++ b/helm/templates/workflow-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-workflow-pvc
+  name: {{ .Values.QGNetWorkflowPVCName }}
   namespace: qgnet
 spec:
   accessModes:
