--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: minio-credentials
+  name: {{ .Release.Name }}-minio-credentials
   namespace: qgnet
 type: Opaque
 stringData:
