--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -59,6 +59,7 @@ argo-workflows:
     workflowNamespaces:
       - default
       - argo
+      - qgnet
 
     config: |
       artifactRepository:
@@ -66,10 +67,10 @@ argo-workflows:
           bucket: argo-workflows
           endpoint: qgnet-ogdc-minio:9000
           accessKeySecret:
-            name: minio-credentials
+            name: {{ .Release.Name }}-minio-credentials
             key: root-user
           secretKeySecret:
-            name: minio-credentials
+            name: {{ .Release.Name }}-minio-credentials
             key: root-password
           insecure: true
 
@@ -110,7 +111,15 @@ argo-workflows:
 
 minio:
   auth:
-    existingSecret: "minio-credentials"
+    ## @param auth.existingSecret Use existing secret for credentials details (`auth.rootUser` and `auth.rootPassword` will be ignored and picked up from this secret).
+    ##
+    existingSecret: "{{ .Release.Name }}-minio-credentials"
+    ## @param auth.rootUserSecretKey Key where the MINIO_ROOT_USER username is being stored inside the existing secret `auth.existingSecret`
+    ##
+    rootUserSecretKey: "root-user"
+    ## @param auth.rootPasswordSecretKey Key where the MINIO_ROOT_USER password is being stored inside the existing secret `auth.existingSecret`
+    ##
+    rootPasswordSecretKey: "root-password"
   ## @param defaultBuckets Comma, semi-colon or space separated list of buckets to create at initialization (only in standalone mode)
   ## e.g:
   ## defaultBuckets: "my-bucket, my-second-bucket"
