--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -5,5 +5,19 @@ metadata:
   namespace: qgnet
 type: Opaque
 stringData:
-  root-user: admin
-  root-password: your-secret-password
+  root-user: "admin"
+  root-password: "your-secret-password"
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-postgresql-credentials
+  namespace: qgnet
+type: Opaque
+stringData:
+  database-password: "test-admin-password"
+  postgres-password: "test-admin-password"
+  password: "test-user-password"
+  replication-password: "test-replication-password"
