Configure PVC for ceph storage class
- Updates values.yaml for minio to use a defined PVC
- Configure minio and workflow PVC to use ceph SC

ref: #4

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -116,3 +116,13 @@ minio:
   ## defaultBuckets: "my-bucket, my-second-bucket"
   ##
   defaultBuckets: "argo-workflows"
+
+  ## Enable persistence using Persistent Volume Claims
+  ## ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/
+  ##
+  persistence:
+    ## @param persistence.enabled Enable MinIO&reg; data persistence using PVC. If false, use emptyDir
+    ##
+    enabled: true
+
+    existingClaim: "{{ .Release.Name }}-minio-pvc"
