--- a/helm/templates/minio-pvc.yaml
+++ b/helm/templates/minio-pvc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-workflow-pvc
-  namespace: qgnet
+  name: {{ .Release.Name }}-minio-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 5Gi  # Match this to your PV's storage
+      storage: 10Gi
   storageClassName: {{ if eq .Values.ENV "dev" }}""{{ else }}"csi-cephfs-sc"{{ end }}
