--- a/helm/templates/workflow-pvc.yaml
+++ b/helm/templates/workflow-pvc.yaml
@@ -9,4 +9,8 @@ spec:
   resources:
     requests:
       storage: 5Gi  # Match this to your PV's storage
-  storageClassName: {{ if eq .Values.ENV "dev" }}""{{ else }}"csi-cephfs-sc"{{ end }}
+  {{ if eq .Values.ENV "dev" }}
+  storageClassName: ""
+  {{ else }}
+  storageClassName: "csi-cephfs-sc"
+  {{ end }}
