Set default install to local dev, unless specified
#4
#11
https://github.com/QGreenland-Net/ogdc-runner/issues/57

--- a/helm/templates/minio-pvc.yaml
+++ b/helm/templates/minio-pvc.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: qgnet
 spec:
   accessModes:
+    {{- $env := .Values.env | default "dev" -}}
     {{- toYaml (index .Values.minio.persistence .Values.env).accessModes | nindent 4 }}
   resources:
     requests:
