Update env var to support dev/stage environments
Update env var to support dev/stage environments
- Resolves issues with storing WF artifacts to minio PVC
#11
#4
https://github.com/QGreenland-Net/ogdc-runner/issues/57

--- a/helm/templates/minio-pvc.yaml
+++ b/helm/templates/minio-pvc.yaml
@@ -1,14 +1,12 @@
-{{ if ne .Values.ENV "dev" }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Release.Name }}-minio-pvc
+  namespace: qgnet
 spec:
   accessModes:
-    - ReadWriteMany
+    {{- toYaml (index .Values.minio.persistence .Values.env).accessModes | nindent 4 }}
   resources:
     requests:
       storage: 10Gi
-  storageClassName: "csi-cephfs-sc"
-{{ end }}
-
+  storageClassName: {{ (index .Values.minio.persistence .Values.env).storageClassName | quote }}
