--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-minio-credentials
-  namespace: qgnet
+  namespace: {{ .Values.OgdcNamespace }}
 type: Opaque
 stringData:
   root-user: admin
