--- a/helm/templates/workflow-pv-dev.yaml
+++ b/helm/templates/workflow-pv-dev.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: {{ .Release.Name }}-workflow-pv
-  namespace: qgnet
+  namespace: {{ .Values.OgdcNamespace }}
 spec:
   capacity:
     storage: 5Gi  # Adjust size as needed
