--- a/helm/templates/workflow-pvc.yaml
+++ b/helm/templates/workflow-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Release.Name }}-workflow-pvc
-  namespace: qgnet
+  namespace: {{ .Values.OgdcNamespace }}
 spec:
   accessModes:
     - ReadWriteMany
