--- a/helm/templates/workflow-pvc.yaml
+++ b/helm/templates/workflow-pvc.yaml
@@ -9,8 +9,4 @@ spec:
   resources:
     requests:
       storage: 5Gi  # Match this to your PV's storage
-  {{ if eq .Values.env "dev" }}
-  storageClassName: ""
-  {{ else }}
-  storageClassName: "csi-cephfs-sc"
-  {{ end }}
+  storageClassName: {{ (index .Values.global .Values.env).defaultStorageClass | quote }}
