Set up database connection for persisting logs
Set up database connection for persisting logs

--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -8,3 +8,16 @@ stringData:
   root-user: "admin"
   root-password: "your-secret-password"
 
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-postgresql-credentials
+  namespace: {{ .Values.OgdcNamespace }}
+type: Opaque
+stringData:
+  postgres-username: "postgres"
+  postgres-password: "your-secret-password"
+  username: "postgres"
+  password: "your-secret-password"
