--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -25,9 +25,9 @@ appVersion: "1.16.0"
 
 dependencies:
   - name: argo-workflows
-    version: 11.1.3
-    repository: https://charts.bitnami.com/bitnami
+    version: 0.45.21
+    repository: https://argoproj.github.io/argo-helm
 
   - name: minio
-    version: 14.0.0
-    repository: https://charts.bitnami.com/bitnami
+    version: 5.4.0
+    repository: https://charts.min.io/
