--- a/helm/templates/secrets.yaml
+++ b/helm/templates/secrets.yaml
@@ -5,19 +5,5 @@ metadata:
   namespace: {{ .Values.OgdcNamespace }}
 type: Opaque
 stringData:
-  root-user: "admin"
-  root-password: "your-secret-password"
-
----
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ .Release.Name }}-postgresql-credentials
-  namespace: {{ .Values.OgdcNamespace }}
-type: Opaque
-stringData:
-  postgres-username: "postgres"
-  postgres-password: "your-secret-password"
-  username: "postgres"
-  password: "your-secret-password"
+  rootUser: "admin"
+  rootPassword: "your-secret-password"
