[WIP] resolve more issues with minIO
[WIP] resolve more issues with minIO

ref: #21

--- a/helm/templates/minio-pvc.yaml
+++ b/helm/templates/minio-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-minio-pvc
+  name: minio-pvc
   namespace: {{ .Values.OgdcNamespace }}
 spec:
   accessModes:
