Update PVC manifests for local install
Update PVC manifests for local install
#23

--- a/helm/admin/minio-pvc.yaml
+++ b/helm/admin/minio-pvc.yaml
@@ -26,4 +26,5 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: ""
+  storageClassName: local-path
+  volumeName: ${RELEASE_NAME}-minio-pv
